[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "gcs-httpx"
version = "0.1.0"
description = "Minimal async Google Cloud Storage + Auth client built on httpx (HTTP/2)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
keywords = ["gcs", "google-cloud-storage", "httpx", "asyncio", "http2"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27.0",
  "orjson>=3.10.0",
  "PyJWT>=2.9.0",
  "cryptography>=43.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "coverage>=7.6.0",
]

[project.urls]
Homepage = "https://example.com/gcs-httpx"
Source = "https://example.com/gcs-httpx"

[tool.hatch.build]
packages = ["gcs_httpx"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"
testpaths = ["tests"]
asyncio_mode = "auto"


